trunk/Archive2/ef/4879889edc6b79/output
main.cpp:7:16: error: too many decimal points in number
main.cpp:10:27: warning: missing terminating ' character
main.cpp:10:5: error: missing terminating ' character
main.cpp:1:1: error: expected unqualified-id before '<' token
 <?xml version="1.0"?> <root xmlns="asdfassadfa">     <isLocal>true</isLocal>    <manufacturer>manufacturer name</manufacturer>     <modelName>model name</modelName>     <IPAddress>123.45.67</IPAddress>    <modelNo>model number</modelNo>     <modelUrl>URL to model site</modelUrl>     <serialNo>manufacturer's serial number</serialNo>   </root>
 ^
